small wrap and size fixed in mobile

--- a/themes/freelancer/static/css/style.css
+++ b/themes/freelancer/static/css/style.css
@@ -12242,7 +12242,6 @@ html {
 }
 
 .masthead .masthead-heading {
-  font-size: 2.25rem;
   line-height: 2.25rem;
 }
 
